--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -5,11 +5,12 @@ This mod is distributed under Version 2 of the GPL.  A copy of the GPL is includ
 
 Patch Notes
 
-v1.0.0-beta3 (Jul. XX, 2019)
+v1.0.0-beta3 (Jul. 11, 2019)
 ========================
+- Add first Profession (Alchemy) for testing the new Prof/Mat system
 - Add Recipe database
 - Add Profession database
-- Fix order of some Tokens with added multiline support
+- Fix order of some Tokens and add multiline support
 - Remove double entries that are no longer needed with recipe db
 
 v1.0.0-beta2 (Jul. 09, 2019)
