--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -5,11 +5,13 @@ This mod is distributed under Version 2 of the GPL.  A copy of the GPL is includ
 
 Patch Notes
 
-v1.0.0-beta4 (Jul. XX, 2019)
+v1.0.1-beta (Jul. XX, 2019)
 ========================
-- Fix bug with unknown items
-- Some more Tokens
+- Add more Tokens
 - Add Blacksmithing
+- Add Enchanting
+- Fix bug with unknown items
+- Fix bug with recipes are not shown for enchants
 
 v1.0.0-beta3 (Jul. 11, 2019)
 ========================
