--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -10,7 +10,8 @@ v1.0.1-beta (Jul. XX, 2019)
 - SetItems are now marked and clickable to show the whole set
 - There is now a search box under every loot page
 - Add Crafting: Leatherworking, Tailoring, Mining, Cooking, Herbalism, Engineering, First Aid, Enchanting, Blacksmithing
-- Add Factions: Argent Dawn, Timbermaw, Thorium Brotherhood, Zandalar Tribe
+- Add Factions:  Argent Dawn, Timbermaw, Thorium Brotherhood, Zandalar Tribe, Brood of Nozdormu
+- Add Factions2: Bloodsail Buccaneers
 - Add Collections: Sets for ZG, AQ20, AQ40
 - Add more Tokens
 - Add Options
