Add Wintersaber Trainers

--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -11,7 +11,7 @@ v1.0.1-beta (Jul. XX, 2019)
 - There is now a search box under every loot page
 - Add Crafting: Leatherworking, Tailoring, Mining, Cooking, Herbalism, Engineering, First Aid, Enchanting, Blacksmithing
 - Add Factions:  Argent Dawn, Timbermaw, Thorium Brotherhood, Zandalar Tribe, Brood of Nozdormu
-- Add Factions2: Bloodsail Buccaneers
+- Add Factions2: Bloodsail Buccaneers, Wintersaber Trainers
 - Add Collections: Sets for ZG, AQ20, AQ40
 - Add more Tokens
 - Add Options
