add mount inspect function

--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -15,6 +15,7 @@ v1.0.1-beta (Jul. XX, 2019)
 - Add Collections: Sets for ZG, AQ20, AQ40
 - Add more Tokens
 - Add Options
+- Add inspect function mounts
 - Fix bug with unknown items
 - Fix bug with recipes are not shown for enchants
 - Fix bug with crafting items cant be linked into chat
