--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -5,8 +5,9 @@ This mod is distributed under Version 2 of the GPL.  A copy of the GPL is includ
 
 Patch Notes
 
-v1.0.1-beta (Jul. XX, 2019)
+v1.1.0-beta (Jul. XX, 2019)
 ========================
+- Favourites system added
 - SetItems are now marked and clickable to show the whole set
 - There is now a search box under every loot page
 - Add Crafting: Leatherworking, Tailoring, Mining, Cooking, Herbalism, Engineering, First Aid, Enchanting, Blacksmithing
