--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -5,21 +5,23 @@ This mod is distributed under Version 2 of the GPL.  A copy of the GPL is includ
 
 Patch Notes
 
-v1.1.0-beta (Jul. XX, 2019)
+v1.1.0-beta (Aug. XX, 2019)
 ========================
 - Favourites system added
 - SetItems are now marked and clickable to show the whole set
 - There is now a search box under every loot page
 - Add Crafting: Leatherworking, Tailoring, Mining, Cooking, Herbalism, Engineering, First Aid, Enchanting, Blacksmithing
-- Add Factions:  Argent Dawn, Timbermaw, Thorium Brotherhood, Zandalar Tribe, Brood of Nozdormu
+- Add Factions: Argent Dawn, Timbermaw, Thorium Brotherhood, Zandalar Tribe, Brood of Nozdormu
 - Add Factions2: Bloodsail Buccaneers, Wintersaber Trainers
 - Add Collections: Sets for ZG, AQ20, AQ40
+- Add World Bosses
 - Add more Tokens
 - Add Options
-- Add inspect function mounts
+- Add inspect function for mounts
 - Fix bug with unknown items
 - Fix bug with recipes are not shown for enchants
 - Fix bug with crafting items cant be linked into chat
+- WIP: Content phases can now enabled in Options
 - Reworke the item set part with ClassicItemSetsLib-1.0 and remove unused stuff from it
 - Headers should no longer show the difficulty text when not needed
 - Options now use AceLib
