--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -5,6 +5,12 @@ This mod is distributed under Version 2 of the GPL.  A copy of the GPL is includ
 
 Patch Notes
 
+v1.1.1-beta (Aug. 07, 2019)
+========================
+- Fix bug with favourites shown in tooltip needs a reload
+- Fix caching issue with unknown items and favourites
+- Crafting items can now use the equip preview ( Ctrl + L-Click )
+
 v1.1.0-beta (Aug. 07, 2019)
 ========================
 - Favourites system added
