--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -5,6 +5,10 @@ This mod is distributed under Version 2 of the GPL.  A copy of the GPL is includ
 
 Patch Notes
 
+v1.1.3-beta (Aug. XX, 2019)
+========================
+- ItemSets are now colored
+
 v1.1.2-beta (Aug. 10, 2019)
 ========================
 - Fix bug with favourites shown in tooltip needs a reload
