--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -8,6 +8,9 @@ Patch Notes
 v1.1.3-beta (Aug. XX, 2019)
 ========================
 - ItemSets are now colored
+- Classes on ItemSets now are colored
+- Add content phase support for item sets
+- Add Atiesh tokens
 
 v1.1.2-beta (Aug. 10, 2019)
 ========================
