--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -5,7 +5,7 @@ This mod is distributed under Version 2 of the GPL.  A copy of the GPL is includ
 
 Patch Notes
 
-v1.1.3-beta (Aug. XX, 2019)
+v1.1.3-beta (Aug. 12, 2019)
 ========================
 - ItemSets are now colored
 - Classes on ItemSets now are colored
