--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -7,6 +7,9 @@ Patch Notes
 
 v1.1.4-beta (Aug. XX, 2019)
 ========================
+- Add Rogue poisons into crafting module
+- Add clear list for favourites
+- Fix missing Minimap button text
 
 
 v1.1.3-beta (Aug. 12, 2019)
