--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -7,9 +7,12 @@ Patch Notes
 
 v1.1.4-beta (Aug. XX, 2019)
 ========================
+- Mounts should now always been shown on mouseover
 - Add Rogue poisons into crafting module
 - Add clear list for favourites
 - Fix missing Minimap button text
+- Fix AQ mounts preview
+- Moce out PvP Weapons and Mounts into own tables
 
 
 v1.1.3-beta (Aug. 12, 2019)
