--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -5,7 +5,7 @@ This mod is distributed under Version 2 of the GPL.  A copy of the GPL is includ
 
 Patch Notes
 
-v1.1.4-beta (Aug. XX, 2019)
+v1.1.4-beta (Aug. 15, 2019)
 ========================
 - Mounts should now always been shown on mouseover
 - Add Rogue poisons into crafting module
