--- a/AtlasLootClassic/Documentation/Release_Notes.txt
+++ b/AtlasLootClassic/Documentation/Release_Notes.txt
@@ -8,7 +8,7 @@ Patch Notes
 
 v1.1.5-beta (Aug. XX, 2019)
 ========================
-
+- Favourite Lists can now shown in the item tooltip
 
 v1.1.4-beta (Aug. 15, 2019)
 ========================
